# docs/swagger.yaml
@@ -1,11 +1,4 @@
 definitions:
-  controllers.VerifyRequest:
-    properties:
-      code:
-        type: string
-      email:
-        type: string
-    type: object
   controllers.VerifyToken:
     properties:
       token:
@@ -94,6 +87,37 @@ definitions:
         description: 用户名
         type: string
     type: object
+  request.LoginRequest:
+    properties:
+      password:
+        type: string
+      username:
+        type: string
+    type: object
+  request.RegisterRequest:
+    properties:
+      email:
+        type: string
+      password:
+        type: string
+      username:
+        type: string
+    type: object
+  request.VerifyRequest:
+    properties:
+      code:
+        type: string
+      email:
+        type: string
+    type: object
+  response.Response:
+    properties:
+      code:
+        type: integer
+      data: {}
+      string:
+        type: string
+    type: object
 info:
   contact: {}
   description: 一个打字游戏
@@ -146,7 +170,7 @@ paths:
       tags:
       - 素材
   /essay:
-    get:
+    post:
       consumes:
       - application/json
       description: 根据传入的 topic 参数，通过 gRPC 流式调用生成文章，并使用 SSE 向前端实时推送生成结果
@@ -353,41 +377,6 @@ paths:
       summary: 获取上传令牌
       tags:
       - 上传
-  /user/forget_password:
-    get:
-      consumes:
-      - application/json
-      description: 向后端发起忘记密码请求，通过邮箱发送重置密码的链接
-      parameters:
-      - description: 用户邮箱地址
-        in: query
-        name: email
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: 密码重置链接已发送
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-        "400":
-          description: 缺少邮箱参数
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-        "500":
-          description: 服务器内部错误
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-      summary: 忘记密码
-      tags:
-      - 用户管理
   /user/login:
     post:
       consumes:
@@ -399,40 +388,14 @@ paths:
         name: user
         required: true
         schema:
-          $ref: '#/definitions/models.User'
+          $ref: '#/definitions/request.LoginRequest'
       produces:
       - application/json
       responses:
         "200":
-          description: 返回登录成功消息及 JWT Token
+          description: 通信成功（通过code来判断具体情况）
           schema:
-            additionalProperties: true
-            type: object
-        "400":
-          description: 请求参数错误
-          schema:
-            additionalProperties: true
-            type: object
-        "401":
-          description: 用户名或密码错误
-          schema:
-            additionalProperties: true
-            type: object
-        "403":
-          description: 邮箱未验证
-          schema:
-            additionalProperties: true
-            type: object
-        "404":
-          description: 用户不存在
-          schema:
-            additionalProperties: true
-            type: object
-        "500":
-          description: 服务器内部错误
-          schema:
-            additionalProperties: true
-            type: object
+            $ref: '#/definitions/response.Response'
       summary: 用户登录接口
       tags:
       - 用户管理
@@ -447,74 +410,15 @@ paths:
         name: user
         required: true
         schema:
-          $ref: '#/definitions/models.User'
-      produces:
-      - application/json
-      responses:
-        "201":
-          description: 用户创建成功
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-        "400":
-          description: 请求参数错误
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-        "409":
-          description: 用户已存在
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-      summary: 用户注册
-      tags:
-      - 用户管理
-  /user/reset_password:
-    get:
-      consumes:
-      - application/json
-      description: 提供重置密码的 token、邮箱和新密码，完成密码重置
-      parameters:
-      - description: 重置密码的 token
-        in: query
-        name: token
-        required: true
-        type: string
-      - description: 用户邮箱
-        in: query
-        name: email
-        required: true
-        type: string
-      - description: 新的密码
-        in: query
-        name: new_password
-        required: true
-        type: string
+          $ref: '#/definitions/request.RegisterRequest'
       produces:
       - application/json
       responses:
         "200":
-          description: 密码重置成功
+          description: 通信成功（通过code来判断具体情况）
           schema:
-            additionalProperties:
-              type: string
-            type: object
-        "400":
-          description: 缺少参数或无效的 token
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-        "500":
-          description: 密码重置失败
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-      summary: 重置密码
+            $ref: '#/definitions/response.Response'
+      summary: 用户注册
       tags:
       - 用户管理
   /user/send_code:
@@ -528,23 +432,9 @@ paths:
         type: string
       responses:
         "200":
-          description: 验证码发送成功
+          description: 通信成功（通过code来判断具体情况）
           schema:
-            additionalProperties:
-              type: string
-            type: object
-        "400":
-          description: 邮箱为空
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-        "500":
-          description: 发送失败
-          schema:
-            additionalProperties:
-              type: string
-            type: object
+            $ref: '#/definitions/response.Response'
       summary: 发送邮箱验证码
       tags:
       - Verification
@@ -559,28 +449,14 @@ paths:
         name: request
         required: true
         schema:
-          $ref: '#/definitions/controllers.VerifyRequest'
+          $ref: '#/definitions/request.VerifyRequest'
       produces:
       - application/json
       responses:
         "200":
-          description: 验证成功
+          description: 通信成功（通过code来判断具体情况）
           schema:
-            additionalProperties:
-              type: string
-            type: object
-        "400":
-          description: 请求体无效
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-        "401":
-          description: 验证码无效或过期
-          schema:
-            additionalProperties:
-              type: string
-            type: object
+            $ref: '#/definitions/response.Response'
       summary: 验证验证码
       tags:
       - Verification
